--- a/unity_planet/Assets/Oculus/VR/Editor/Oculus.VR.Editor.asmdef
+++ b/unity_planet/Assets/Oculus/VR/Editor/Oculus.VR.Editor.asmdef
@@ -9,6 +9,7 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
+    "autoReferenced": false,
     "versionDefines": [
         {
             "name": "com.unity.xr.management",
