--- a/unity_planet/Assets/Plugins/Sirenix/Odin Inspector/Scripts/Editor/Sirenix.OdinInspector.CompatibilityLayer.Editor.asmdef
+++ b/unity_planet/Assets/Plugins/Sirenix/Odin Inspector/Scripts/Editor/Sirenix.OdinInspector.CompatibilityLayer.Editor.asmdef
@@ -6,7 +6,7 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
-    "autoReferenced": true,
+    "autoReferenced": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "defineConstraints": []
