--- a/unity_planet/Assets/Oculus/VR/Oculus.VR.asmdef
+++ b/unity_planet/Assets/Oculus/VR/Oculus.VR.asmdef
@@ -1,10 +1,13 @@
 {
     "name": "Oculus.VR",
     "references": [],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
     "versionDefines": [
         {
             "name": "com.unity.xr.management",
