--- a/unity_planet/Assets/Planet Earth Pack Pro/Planet Earth Pack Pro.asmdef
+++ b/unity_planet/Assets/Planet Earth Pack Pro/Planet Earth Pack Pro.asmdef
@@ -1,3 +1,12 @@
-﻿{
-	"name": "PlanetEarthPackPro"
+{
+    "name": "PlanetEarthPackPro",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": []
 }
