--- a/unity_planet/Assets/Planet/CountryCodeToGps/CountryCodeToGps.asmdef
+++ b/unity_planet/Assets/Planet/CountryCodeToGps/CountryCodeToGps.asmdef
@@ -1,8 +1,6 @@
 {
     "name": "CountryCodeToGps",
-    "references": [
-        "GUID:ecdd01507467e4185ab6d71349f6c4bb"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
