--- a/unity_planet/Assets/Planet/Planet.asmdef
+++ b/unity_planet/Assets/Planet/Planet.asmdef
@@ -4,7 +4,10 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:ecdd01507467e4185ab6d71349f6c4bb",
-        "GUID:e15a820d7286f42ff9e2ea05749e1998"
+        "GUID:e15a820d7286f42ff9e2ea05749e1998",
+        "GUID:f272ade75c6a1474a999737b67648e83",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
