--- a/unity_planet/Assets/Planet/Planet.asmdef
+++ b/unity_planet/Assets/Planet/Planet.asmdef
@@ -7,7 +7,9 @@
         "GUID:e15a820d7286f42ff9e2ea05749e1998",
         "GUID:f272ade75c6a1474a999737b67648e83",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:ead3eae54ae144c868ebdddd3dd0b292",
+        "GUID:f64c9ebcd7899c3448a08dc9f9ddbe30"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
