--- a/unity_planet/Assets/Planet/Planet.asmdef
+++ b/unity_planet/Assets/Planet/Planet.asmdef
@@ -9,7 +9,8 @@
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:ead3eae54ae144c868ebdddd3dd0b292",
-        "GUID:f64c9ebcd7899c3448a08dc9f9ddbe30"
+        "GUID:f64c9ebcd7899c3448a08dc9f9ddbe30",
+        "GUID:5f08d798f6e1e455fbbaa5307fa70750"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
