Filter out non-English articles

--- a/unity_planet/Assets/Planet/Tests/PlanetTests.asmdef
+++ b/unity_planet/Assets/Planet/Tests/PlanetTests.asmdef
@@ -1,9 +1,10 @@
 ﻿{
-    "name": "PlanetViewTests",
+    "name": "PlanetTests",
     "optionalUnityReferences": [
         "TestAssemblies"
     ],
     "references": [
-        "Planet"
+        "Planet",
+        "NewsApi"
     ]
 }
