--- a/unity_planet/Packages/manifest.json
+++ b/unity_planet/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
+    "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.test-framework": "1.1.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.oculus.android": "2.38.4",
