--- a/unity_planet/Packages/manifest.json
+++ b/unity_planet/Packages/manifest.json
@@ -6,6 +6,8 @@
     "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.test-framework": "1.1.9",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.arfoundation": "3.0.1",
+    "com.unity.xr.arkit": "3.0.1",
     "com.unity.xr.oculus.android": "2.38.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
